Fixed: Dark mode role boxes weren't visible.

--- a/assets/stylesheets/lobby.css
+++ b/assets/stylesheets/lobby.css
@@ -637,7 +637,7 @@ textarea .dark {
 }
 
 .dark .role-p {
-    background-color: #444444;
+    background-color: #333333;
     /*border: 1px solid #dddddd;*/
     border: 1px solid transparent;
 }
